// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh ErGXa"
  >
    <label
      class="sc-dmyCSP jGsYty"
      data-name="label"
    >
      <h3
        class="sc-eDLKkx ebsndr"
        data-name="heading"
      />
      <input
        class="sc-guDLey caCvKY"
        data-error="false"
        data-name="input"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh ErGXa"
  >
    <label
      class="sc-dmyCSP jGsYty"
      data-name="label"
    >
      <h3
        class="sc-eDLKkx ebsndr"
        data-name="heading"
      />
      <input
        class="sc-guDLey caCvKY error undefined-error"
        data-error="true"
        data-name="input"
      />
    </label>
    <span
      class="sc-hLQSwg gpNhwr"
      data-name="error-message"
    >
      error
    </span>
  </div>
</div>
`;
